--- a/bbsittingsharing/settings_specific.py.sample
+++ b/bbsittingsharing/settings_specific.py.sample
@@ -1,6 +1,7 @@
 # Build paths inside the project like this: os.path.join(BASE_DIR, ...)
 import os
 BASE_DIR = os.path.dirname(os.path.dirname(__file__))
+STATIC_ROOT = os.path.dirname(BASE_DIR)+"/static"
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
@@ -14,6 +15,8 @@ DATABASES = {
         'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
     }
 }
+
+ALLOWED_HOSTS = ['bbsittingsharing.host']
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = '1*81s054+(1xa4ic=1^vo=8j76*hy)$8_l&o$^-41a$k%wip6i'
