--- a/bbsittingsharing/settings_specific.py.sample
+++ b/bbsittingsharing/settings_specific.py.sample
@@ -1,6 +1,6 @@
 # Build paths inside the project like this: os.path.join(BASE_DIR, ...)
 import os
-BASE_DIR = os.path.dirname(os.path.dirname(__file__))
+BASE_DIR = os.path.dirname(os.path.dirname(os.path.dirname(__file__)))
 STATIC_ROOT = os.path.dirname(BASE_DIR)+"/static"
 
 # SECURITY WARNING: don't run with debug turned on in production!
@@ -17,6 +17,8 @@ DATABASES = {
 }
 
 ALLOWED_HOSTS = ['bbsittingsharing.host']
+EMAIL_BACKEND = 'django.core.mail.backends.dummy.EmailBackend'
+DEFAULT_FROM_EMAIL = 'webmaster@example.com'
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = '1*81s054+(1xa4ic=1^vo=8j76*hy)$8_l&o$^-41a$k%wip6i'
